--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -126,7 +126,7 @@
       <p class="mt-4 text-lg leading-8 text-gray-300">Subscribe to get the last news and update about code and machine
         learning.</p>
       <div class="mt-6 flex max-w-md gap-x-4">
-        <label for="email-address" class="sr-only">Email address</label>
+        <label for="email-address" class="sr-only">Email address prueba</label>
         <input id="email-address" name="email" type="email" autocomplete="email" required
           class="min-w-0 flex-auto rounded-md border-0 bg-white/5 px-3.5 py-2 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6"
           placeholder="Enter your email">
