--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -67,7 +67,7 @@
           <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
             <a href="https://github.com/rubenchomazo/reverse-proxy">
               <span class="absolute inset-0"></span>
-              Reverse Proxy
+              Reverse Proxy test test
             </a>
           </h3>
           <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Reverse proxy using spring framework and
@@ -126,7 +126,7 @@
       <p class="mt-4 text-lg leading-8 text-gray-300">Subscribe to get the last news and update about code and machine
         learning.</p>
       <div class="mt-6 flex max-w-md gap-x-4">
-        <label for="email-address" class="sr-only">Email address prueba</label>
+        <label for="email-address" class="sr-only">Email address</label>
         <input id="email-address" name="email" type="email" autocomplete="email" required
           class="min-w-0 flex-auto rounded-md border-0 bg-white/5 px-3.5 py-2 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6"
           placeholder="Enter your email">
