--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,143 +1,2 @@
-<div class="bg-white">
-  <header class="absolute inset-x-0 top-0 z-50">
-    <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
-      <div class="flex lg:flex-1">
-        <a href="#" class="-m-1.5 p-1.5">
-          <span class="sr-only">Rubén Mazo - Portfolio</span>
-          <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
-        </a>
-      </div>
-      <div class="hidden lg:flex lg:gap-x-12 lg:justify-end">
-        <a href="#" class="text-sm font-semibold leading-6 text-gray-900">GitHub</a>
-        <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Twitter</a>
-        <a href="#" class="text-sm font-semibold leading-6 text-gray-900">LinkedIn</a>
-      </div>
-    </nav>
-  </header>
-</div>
-<div class="overflow-hidden bg-white py-24 sm:py-32">
-  <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
-      <div class="lg:pr-8 lg:pt-4">
-        <div class="lg:max-w-lg">
-          <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Hi I'm Rubén Mazo</p>
-          <p class="mt-6 text-lg leading-8 text-gray-600">I am a Java developer with over 14 years of experience in
-            software development. I have a strong knowledge of the principles and practices of Java programming, and I
-            am familiar with a variety of frameworks and libraries. I have worked on a variety of projects, including
-            web applications, mobile applications, and enterprise software. My skills and experience include:</p>
-          <dl class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-600 lg:max-w-none">
-            <div class="relative pl-9">
-              <dd class="inline">Java application development using Spring Boot, Spring MVC, and Hibernate.</dd>
-            </div>
-            <div class="relative pl-9">
-              <dd class="inline">Experience in developing unit and integration tests</dd>
-            </div>
-          </dl>
-          <p class="mt-6 text-lg leading-8 text-gray-600">My accomplishments include:</p>
-          <dl class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-600 lg:max-w-none">
-            <div class="relative pl-9">
-              <dd class="inline">Leading the development team of a Java web application.</dd>
-            </div>
-            <div class="relative pl-9">
-              <dd class="inline">Reduced development time by 50% by using agile development practices.</dd>
-            </div>
-          </dl>
-        </div>
-      </div>
-      <img src="https://tailwindui.com/img/component-images/dark-project-app-screenshot.png" alt="Product screenshot"
-        class="w-[48rem] max-w-none rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-[57rem] md:-ml-4 lg:-ml-0"
-        width="2432" height="1442">
-    </div>
-  </div>
-</div>
-<div class="bg-white py-24 sm:py-32">
-  <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Recent Projects</h2>
-    <div
-      class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
-      <article class="flex max-w-xl flex-col items-start justify-between">
-        <div class="flex items-center gap-x-4 text-xs">
-          <time datetime="2020-03-16" class="text-gray-500">Aug 15, 2023</time>
-          <a href="https://github.com/rubenchomazo/reverse-proxy"
-            class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Java</a>
-          <a href="https://github.com/rubenchomazo/reverse-proxy"
-            class="relative z-10 rounded-full bg-orange-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-orange-100">AWS</a>
-        </div>
-        <div class="group relative">
-          <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
-            <a href="https://github.com/rubenchomazo/reverse-proxy">
-              <span class="absolute inset-0"></span>
-              Reverse Proxy test test
-            </a>
-          </h3>
-          <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Reverse proxy using spring framework and
-            implementing unit test to generate load test. This deploy is on Amazon Web Service using ElasticBeanStalk
-          </p>
-        </div>
-      </article>
-      <article class="flex max-w-xl flex-col items-start justify-between">
-        <div class="flex items-center gap-x-4 text-xs">
-          <time datetime="2020-03-16" class="text-gray-500">Aug 15, 2023</time>
-          <a href="https://github.com/rubenchomazo/reverse-proxy"
-            class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Java</a>
-          <a href="https://github.com/rubenchomazo/reverse-proxy"
-            class="relative z-10 rounded-full bg-purpple-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-purpple-100">ELK</a>
-        </div>
-        <div class="group relative">
-          <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
-            <a href="https://github.com/rubenchomazo/reverse-proxy">
-              <span class="absolute inset-0"></span>
-              Integration Java with ELK Suit
-            </a>
-          </h3>
-          <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Java Microservices using spring framework to
-            generate rest service, The app generates logs with Log4j, theses are integrate with logstash and
-            elasticSearch for visualize I use Kibana to see the metrics </p>
-        </div>
-      </article>
-      <article class="flex max-w-xl flex-col items-start justify-between">
-        <div class="flex items-center gap-x-4 text-xs">
-          <time datetime="2020-03-16" class="text-gray-500">Aug 15, 2023</time>
-          <a href="https://github.com/rubenchomazo/gpt-console"
-            class="relative z-10 rounded-full bg-orange-50 px-3 py-1.5 font-medium text-orange-600 hover:bg-orange-100">Python</a>
-          <a href="https://github.com/rubenchomazo/gpt-console"
-            class="relative z-10 rounded-full bg-green-50 px-3 py-1.5 font-medium text-green-600 hover:bg-green-100">OpenAI</a>
-        </div>
-        <div class="group relative">
-          <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
-            <a href="https://github.com/rubenchomazo/gpt-console">
-              <span class="absolute inset-0"></span>
-              Chat GPT 3.5 Turbo by Console
-            </a>
-          </h3>
-          <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Console application using python for connect to
-            OpenAI Services to obtain the
-            queries for chatgpt </p>
-        </div>
-      </article>
-      <!-- More posts... -->
-    </div>
-  </div>
-</div>
-<div class="relative isolate overflow-hidden bg-gray-900 py-16 sm:py-24 lg:py-32">
-  <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="max-w-xl lg:max-w-lg">
-      <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Subscribe to our newsletter.</h2>
-      <p class="mt-4 text-lg leading-8 text-gray-300">Subscribe to get the last news and update about code and machine
-        learning.</p>
-      <div class="mt-6 flex max-w-md gap-x-4">
-        <label for="email-address" class="sr-only">Email address</label>
-        <input id="email-address" name="email" type="email" autocomplete="email" required
-          class="min-w-0 flex-auto rounded-md border-0 bg-white/5 px-3.5 py-2 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6"
-          placeholder="Enter your email">
-        <button type="submit"
-          class="flex-none rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500">Subscribe</button>
-      </div>
-    </div>
-  </div>
-  <div class="absolute left-1/2 top-0 -z-10 -translate-x-1/2 blur-3xl xl:-top-6" aria-hidden="true">
-    <div class="aspect-[1155/678] w-[72.1875rem] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30"
-      style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)">
-    </div>
-  </div>
-</div>
+<!-- <app-whoami></app-whoami> -->
+<app-whoami2></app-whoami2>
