--- a/portfolio/src/app/whoami/whoami.component.html
+++ b/portfolio/src/app/whoami/whoami.component.html
@@ -151,7 +151,7 @@
         <!-- First project -->
         <div class="border-1 rounded-lg bg-white dark:bg-slate-700 m-5">
             <div class="m-2">
-                <img src="../../assets/img/reverse-proxy.png" alt="firstProject" class="opacity-80 hover:opacity-100">
+                <img src="./assets/img/reverse-proxy.png" alt="firstProject" class="opacity-80 hover:opacity-100">
                 <h4 class="font-bold my-2">Reverse Proxy</h4>
                 <article class="flex justify-between">
                     <div class="flex flex-nowrap items-center">
@@ -169,7 +169,7 @@
         <!-- Second project -->
         <div class="border-1 rounded-lg bg-white dark:bg-slate-700 m-5">
             <div class="m-2">
-                <img src="../../assets/img/fargate-aws.png" alt="secondProject" class="opacity-80 hover:opacity-100">
+                <img src="./assets/img/fargate-aws.png" alt="secondProject" class="opacity-80 hover:opacity-100">
                 <h4 class="font-bold my-2">Integration Java with ELK Suit</h4>
                 <article class="flex justify-between">
                     <div class="flex flex-nowrap items-center">
@@ -187,7 +187,7 @@
         <!-- Third project -->
         <div class="border-1 rounded-lg bg-white dark:bg-slate-700 m-5">
             <div class="m-2">
-                <img src="../../assets/img/fargate-aws.png" alt="firstProject" class="opacity-80 hover:opacity-100">
+                <img src="./assets/img/fargate-aws.png" alt="firstProject" class="opacity-80 hover:opacity-100">
                 <h4 class="font-bold my-2">Integration Java with ELK Suit</h4>
                 <article class="flex justify-between">
                     <div class="flex flex-nowrap items-center">
@@ -202,6 +202,7 @@
                 </article>
             </div>
         </div>
+        
     </section>
     <!-- Contacts  -->
     <h3 id="section-4"
@@ -211,18 +212,18 @@
         <form action="" class="w-[90%] md:max-w-[600px] m-auto">
             <div class="py-3">
                 <input type="email" name="email" id="email" placeholder="info@exaple.com"
-                    class="p-3 w-full rounded-lg focus:outline-none focus:ring focus:ring-blue-400" />
+                    class="p-3 w-full rounded-lg focus:outline-none focus:ring focus:ring-blue-400 dark:text-slate-700" />
             </div>
             <div class="py-3">
                 <input type="text" name="naame" id="name" placeholder="Name"
-                    class="p-3 w-full rounded-lg focus:outline-none focus:ring focus:ring-blue-400" />
+                    class="p-3 w-full rounded-lg focus:outline-none focus:ring focus:ring-blue-400 dark:text-slate-700" />
             </div>
             <div>
                 <textarea name="msg" id="msg" rows="5" placeholder="Message"
-                    class="p-3 w-full rounded-lg focus:outline-none focus:ring focus:ring-blue-400"></textarea>
+                    class="p-3 w-full rounded-lg focus:outline-none focus:ring focus:ring-blue-400 dark:text-slate-700"></textarea>
             </div>
             <div class="my-3">
-                <button class="bg-sky-600 text-white p-3 w-full rounded-lg text-xl tracking-widest">Send
+                <button class="bg-sky-600 text-white p-3 w-full rounded-lg text-xl tracking-widest ">Send
                     Message</button>
             </div>
         </form>
