[FIX] URL instagram

--- a/portfolio/src/app/whoami/whoami.component.html
+++ b/portfolio/src/app/whoami/whoami.component.html
@@ -42,7 +42,7 @@
             <div class="py-6">
                 <a class="pr-2 text-2xl hover:text-sky-600 px-2" href="https://twitter.com/RubnMazo"><i
                         class="bi bi-twitter"></i></a>
-                <a class="pr-2 text-2xl hover:text-sky-600 px-2" href="https://www.instagram.com/mazocol/"><i
+                <a class="pr-2 text-2xl hover:text-sky-600 px-2" href="https://www.instagram.com/rubenchomazo/"><i
                         class="bi bi-instagram"></i></a>
                 <a class="pr-2 text-2xl hover:text-sky-600 px-2" href="https://www.linkedin.com/in/rubenmazo"><i
                         class="bi bi-linkedin"></i></a>
@@ -457,7 +457,7 @@
         <h3 class="text-3xl text-slate-700 dark:text-white mt-12 mb-10 px-10 font-bold tracking-widest text-center">
             Last projects
         </h3>
-        <div class="my-12 flex flex-col items-center justify-center w-[500px] m-auto lg:flex-col">
+        <div class="my-12 flex flex-col items-center justify-center w-[90%] m-auto lg:flex-col">
             <!-- First project -->
             <div class="border-1 rounded-lg bg-white dark:bg-slate-700 m-5">
                 <div class="m-2">
@@ -593,7 +593,7 @@
         <p>Design by &#38; Developed by @Rubencho.</p>
         <div class="my-2">
             <a href="https://twitter.com/RubnMazo" class="bi bi-twitter hover:text-sky-500"></a>
-            <a href="https://www.instagram.com/mazocol" class="bi bi-instagram hover:text-sky-500 px-2"></a>
+            <a href="https://www.instagram.com/rubenchomazo/" class="bi bi-instagram hover:text-sky-500 px-2"></a>
             <a href="https://www.linkedin.com/in/rubenmazo" class="bi bi-linkedin hover:text-sky-500 px-2"></a>
             <a href="https://github.com/rubenchomazo" class="bi bi-github hover:text-sky-500 px-2"></a>
         </div>
