--- a/portfolio/src/app/whoami/whoami.component.html
+++ b/portfolio/src/app/whoami/whoami.component.html
@@ -152,7 +152,7 @@
         Technical stack
     </h3>
     <section>
-        <div class="flex justify-between lg:flex-col lg:w-[100%] w-[90%]">
+        <div class="flex justify-between lg:flex-col lg:w-[100%] w-[70%]">
             <button type="button" id="linkStack1" (click)="changeStack('stack1')" class="border-b-2 hover:dark:bg-slate-700 w-full px-4 py-1 hover:bg-white focus:border-sky-500 focus:bg-white focus:dark:bg-slate-700 lg:border-l-2
                 lg:border-b-0 lg:h-full lg:text-left border-sky-500 dark:bg-slate-700">Programming languages</button>
             <button type="button" (click)="changeStack('stack2')" class="border-b-2 hover:dark:bg-slate-700 w-full px-4 py-1 hover:bg-white focus:border-sky-500 focus:bg-white focus:dark:bg-slate-700 lg:border-l-2
@@ -361,43 +361,42 @@
             <div id="default-carousel" class="relative" data-carousel="static">
                 <!-- Carousel wrapper -->
                 <div class="overflow-hidden relative h-[900px] rounded-lg">
-                    <!-- Item 1 -->
+                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                        <img src="./assets/img/devops.jpg" class="object-fill h-full w-full" alt="devops1">
+                    </div>
                     <div class="hidden duration-700 ease-in-out" data-carousel-item>
                         <img src="./assets/img/slide7.jpg" class="object-fill h-full w-full" alt="cdci">
                     </div>
-                    <!-- Item 2 -->
                     <div class="hidden duration-700 ease-in-out" data-carousel-item>
                         <img src="./assets/img/slide13.jpg" class="object-fill h-full w-full" alt="git">
                     </div>
-                    <!-- Item 3 -->
                     <div class="hidden duration-700 ease-in-out" data-carousel-item>
                         <img src="./assets/img/slide24.jpg" class="object-fill h-full w-full" alt="docker">
                     </div>
-                    <!-- Item 4 -->
                     <div class="hidden duration-700 ease-in-out" data-carousel-item>
                         <img src="./assets/img/slide31.jpg" class="object-fill h-full w-full" alt="noops">
                     </div>
-                    <!-- Item 5 -->
+                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                        <img src="./assets/img/cloud.jpg" class="object-fill h-full w-full" alt="cloud1">
+                    </div>
                     <div class="hidden duration-700 ease-in-out" data-carousel-item>
                         <img src="./assets/img/slide33.jpg" class="object-fill h-full w-full" alt="services">
                     </div>
-                    <!-- Item 6 -->
                     <div class="hidden duration-700 ease-in-out" data-carousel-item>
                         <img src="./assets/img/slide14.jpg" class="object-fill h-full w-full" alt="cloudDatabases">
                     </div>
-                    <!-- Item 7 -->
                     <div class="hidden duration-700 ease-in-out" data-carousel-item>
                         <img src="./assets/img/slide16.jpg" class="object-fill h-full w-full" alt="monitoring">
                     </div>
-                    <!-- Item 8 -->
+                    <div class="hidden duration-700 ease-in-out" data-carousel-item>
+                        <img src="./assets/img/databases.jpg" class="object-fill h-full w-full" alt="dbgen">
+                    </div>
                     <div class="hidden duration-700 ease-in-out" data-carousel-item>
                         <img src="./assets/img/slide4.jpg" class="object-fill h-full w-full" alt="databasetypes">
                     </div>
-                    <!-- Item 9 -->
                     <div class="hidden duration-700 ease-in-out" data-carousel-item>
                         <img src="./assets/img/slide18.jpg" class="object-fill h-full w-full" alt="sqllite">
                     </div>
-                    <!-- Item 10 -->
                     <div class="hidden duration-700 ease-in-out" data-carousel-item>
                         <img src="./assets/img/slide11.jpg" class="object-fill h-full w-full" alt="redis">
                     </div>
@@ -424,6 +423,13 @@
                         data-carousel-slide-to="8"></button>
                     <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 10"
                         data-carousel-slide-to="9"></button>
+                    <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 11"
+                        data-carousel-slide-to="10"></button>
+                    <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 12"
+                        data-carousel-slide-to="11"></button>
+                    <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 13"
+                        data-carousel-slide-to="12"></button>
+
                 </div>
                 <!-- Slider controls -->
                 <button type="button"
